# MLIRSwift

./: .devcontainer  .gitignore  .swift-format  .vscode  Package.swift  README.md
.github/workflows/: buildAndTest.yml
Sources/CDialects/: module.modulemap
Sources/CMLIR/: module.modulemap
Sources/MLIR/Builtins/: Builtin Attributes.swift  Builtin Named Attributes.swift  Builtin Operations.swift  Builtin Types.swift
Sources/MLIR/IR/: Type.swift
Sources/MLIR/Infrastructure/: Context.swift
Tests/DialectTests/: Context Tests.swift  Module Tests.swift
Tests/MLIRTests/: Attribute Tests.swift  Diagnostic Tests.swift  Type Tests.swift
Tools/: build-dependencies  llvm-commit  swift-format
Tools/Docker/: Dockerfile  devcontainer.json
Tools/MLIRSwiftSupport/: MLIRSwiftSupport.cpp  MLIRSwiftSupport.h
Tools/MLIRSwiftTableGen/: CMakeLists.txt  MLIRSwiftTableGen.cpp
Tools/SwiftFormat/: Package.swift
Tools/VSCode/: launch.json  tasks.json
